сверстана карточка регистрации аккаунта

--- a/toxin/src/pages/cards/cards.pug
+++ b/toxin/src/pages/cards/cards.pug
@@ -5,6 +5,7 @@ include ../../blocks/form-elements/text-field/text-field
 include ../../blocks/form-elements/dropdown/dropdown
 include ../../blocks/form-elements/buttons/buttons
 include ../../blocks/form-elements/radio-btn/radio-btn
+include ../../blocks/form-elements/toggle/toggle
 
 block title
     | Cards
@@ -18,48 +19,63 @@ block cards-section
         .cards__wrapper
             .cards__column
                 .cards__item
-                    .find-apartments__item
-                        +title('cards__title', 'Найдем номера под ваши пожелания')
+                    .find-apartments__items
+                        .find-apartments__item
+                            +title('cards__title', 'Найдем номера под ваши пожелания')
 
-                        form(class="find-apartments__form" action="/mock-address" method="get")
-                            .datepicker-field
-                                .datepicker-field--left
-                                    +subtitle('datepicker-field__title', 'Прибытие')
-                                    +datepickerLeft('text-field--datepicker text-field-datepicker--left', 'ДД.ММ.ГГГГ', 'startDate', 'start', 'material-icons--left-datepicker', 'expand_more')
-                                .datepicker-field--right
-                                    +subtitle('datepicker-field__title', 'Выезд')
-                                    +datepickerRight('text-field--datepicker text-field-datepicker--right', 'ДД.ММ.ГГГГ', 'endDate', 'end', 'material-icons--left-datepicker', 'expand_more')
+                            form(class="find-apartments__form" action="/mock-address" method="get")
+                                .datepicker-field
+                                    .datepicker-field--left
+                                        +subtitle('datepicker-field__title', 'Прибытие')
+                                        +datepickerLeft('text-field--datepicker text-field-datepicker--left', 'ДД.ММ.ГГГГ', 'startDate', 'start', 'material-icons--left-datepicker', 'expand_more')
+                                    .datepicker-field--right
+                                        +subtitle('datepicker-field__title', 'Выезд')
+                                        +datepickerRight('text-field--datepicker text-field-datepicker--right', 'ДД.ММ.ГГГГ', 'endDate', 'end', 'material-icons--left-datepicker', 'expand_more')
 
-                    .find-apartments__item
-                        +subtitle('find-apartments__subtitle', 'Гости')
-                    .find-apartments__dropdown
-                        form(action="")
-                            .form-elements__input--dropdown
-                                +dropdown('Сколько гостей')
+                        .find-apartments__item
+                            +subtitle('find-apartments__subtitle', 'Гости')
+                        .find-apartments__dropdown
+                            form(action="")
+                                .form-elements__input--dropdown
+                                    +dropdown('Сколько гостей')
 
-                            div(class="dropdown__menu")
-                                +dropdownControls('item-adult', 'Взрослые', '-', '0', '+')
-                                +dropdownControls('item-children', 'Дети', '-', '0', '+')
-                                +dropdownControls('item-babies', 'Младенцы', '-', '0', '+')
+                                div(class="dropdown__menu")
+                                    +dropdownControls('item-adult', 'Взрослые', '-', '0', '+')
+                                    +dropdownControls('item-children', 'Дети', '-', '0', '+')
+                                    +dropdownControls('item-babies', 'Младенцы', '-', '0', '+')
 
-                                div(class="dropdown__buttons" data-id="item-btn")
-                                    button(class="clear-btn") Очистить
-                                    button(class="apply-btn") Применить
+                                    div(class="dropdown__buttons" data-id="item-btn")
+                                        button(class="clear-btn") Очистить
+                                        button(class="apply-btn") Применить
 
-                    .find-apartments__item
-                        +longButton('find-apartments__button long-button', 'Подобрать номер', 'long-button__icon', 'arrow_forward')
+                        .find-apartments__item
+                            +longButton('find-apartments__button long-button', 'Подобрать номер', 'long-button__icon', 'arrow_forward')
 
                 .cards__item
-                    .register
-                        +title('cards__title', 'Регистрация аккаунта')
-                        +inputField('', 'cards__field--name text-field', '', 'text', 'Имя')
-                        +inputField('', 'cards__field--surname text-field', '', 'text', 'Фамилия')
+                    .register__items
+                        .register
+                            +title('cards__title', 'Регистрация аккаунта')
+                            +inputField('', 'cards__field--name text-field', '', 'text', 'Имя')
+                            +inputField('', 'cards__field--surname text-field', '', 'text', 'Фамилия')
 
-                        .register__gender
-                            +radioButton('male-btn', 'marker__descr--female', 'Мужской', 'male-btn', 'checked')
-                            +radioButton('female-btn', 'marker__descr--male', 'Женский', 'female-btn', '')
+                            .register__gender
+                                +radioButton('male-btn', 'marker__descr--female', 'Мужской', 'male-btn', 'checked')
+                                +radioButton('female-btn', 'marker__descr--male', 'Женский', 'female-btn', '')
 
-                        .register__birthday
-                            +subtitle('register-birthday__subtitle', 'дата рождения')
+                            .register__birthday
+                                +subtitle('datepicker-field__title', 'дата рождения')
+                                +inputField('', 'register__birthday--field text-field', '', 'text', 'ДД.ММ.ГГГГ')
 
-                            //-доделать дата рождения, разобраться с классами
+                            .register__service
+                                +subtitle('datepicker-field__title', 'данные для входа в сервис')
+                                +inputField('', 'register__service--email text-field', '', 'email', 'Email')
+                                +inputField('', 'register__service--password text-field', '', 'password', 'Пароль')
+                                +toggle('register__service--toggle', 'Получать спецпредложения', 'register__service--toggle', '')
+
+                            .register__button
+                                +longButton('register__button--long long-button', 'перейти к оплате', 'long-button__icon', 'arrow_forward')
+
+                            .register__account
+                                .account__text Уже есть аккаунт на Toxin
+                                .account__button
+                                    +accountButton('rounded-button', 'Войти')
