--- a/toxin/src/pages/cards/cards.scss
+++ b/toxin/src/pages/cards/cards.scss
@@ -35,9 +35,12 @@ html, body {
 
 .cards__item{
     max-width: 380px;
-    height: 374px;
     width: 100%;
     margin-bottom: 40px;
+}
+
+.find-apartments__items{
+    height: 374px;
     background: #FFFFFF;
     border: 1px solid rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
@@ -60,8 +63,7 @@ html, body {
 }
 
 .datepicker-field__title{
-    width: 83px;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 12px;
@@ -98,6 +100,16 @@ html, body {
 }
 
 // вторая карточка - регистрация аккаунта
+.register__items{
+    height: 646px;
+    background: #FFFFFF;
+    border: 1px solid rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    padding: 40px 30px 0px 30px;
+}
+
 .cards__field--name{
     margin-bottom: 10px;
 }
@@ -105,4 +117,74 @@ html, body {
 .register__gender{
     display: flex;
     margin-top: 10px;
+}
+
+.register__birthday, .register__service{
+    margin-top: 20px;
+}
+
+.register__service--password, .register__service--toggle{
+    margin-top: 10px;
+}
+
+.register__button--long{
+    margin-top: 15px;
+}
+
+.register__account{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 25px;
+}
+
+.account__text{
+    width: 186px;
+    font-family: Montserrat, OpenSans, sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    color: #000;
+}
+
+.account__button{
+    position: relative;
+    z-index: 1;
+}
+
+.rounded-button{
+    display: inline-block;
+    position: relative;
+    top: 2px;
+    font-family: Montserrat, OpenSans, sans-serif;
+    color: #bc9cff;
+    border-radius: 22px;
+    border: none;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    line-height: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    user-select: none;
+    background-color: #fff;
+    height: 40px;
+    padding: 0 25px;
+}
+
+.rounded-button::after {
+    display: inherit;
+    content: '';
+    position: absolute;
+    top: -2px;
+    bottom: -2px;
+    left: -2px;
+    right: -2px;
+    z-index: -1;
+    border-radius: 22px;
+    background-image: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
 }
