--- a/toxin/src/blocks/form-elements/buttons/buttons.pug
+++ b/toxin/src/blocks/form-elements/buttons/buttons.pug
@@ -9,3 +9,6 @@ mixin simpleButton(btnClassName, title)
 mixin longButton(btnClassName, title, iconClassName, iconName)
     button(class= btnClassName) #{title}
         i(class= iconClassName) #{iconName}
+
+mixin accountButton(buttonClassName, title)
+    button(class= buttonClassName) #{title}
