--- a/toxin/src/pages/cards/cards.pug
+++ b/toxin/src/pages/cards/cards.pug
@@ -8,6 +8,8 @@ include ../../blocks/form-elements/radio-btn/radio-btn
 include ../../blocks/form-elements/toggle/toggle
 include ../../blocks/cards/invoice/invoice
 include ../../blocks/cards/booking/booking
+include ../../blocks/form-elements/rate-btn/rate-btn
+include ../../blocks/cards/gallery/gallery
 
 block title
     | Cards
@@ -149,21 +151,10 @@ block cards-section
 
                 .cards__item
                     .gallery__items
-                        .gallery
-                            .gallery__image
-                                img(src=require("../../assets/img/gallery-1.jpg"), alt="apartment photo")
-                                .gallery__left-arrow.gallery__arrow
-                                    i(class="material-icons gallery__icon") keyboard_arrow_left
-                                .gallery__right-arrow.gallery__arrow
-                                    i(class="material-icons gallery__icon") keyboard_arrow_left
-                                .gallery__point-container
-                                    .gallery__point.gallery__point_filled
-                                    .gallery__point
-                                    .gallery__point
-                                    .gallery__point
+                        +gallery('gallery-1.jpg', 'true', '№', '888', 'люкс', '9 990₽', ' в сутки', 'star', '', 'cards__rate form-elements__rate--right', '145', 'Отзывов')
+                        +gallery('gallery-2.jpg', 'false', '№', '840', '', '9 990₽', ' в сутки', 'star', '', '', '65', 'Отзывов')
 
 
-                .cards__item
-                    +booking('№', '888', 'люкс', '9 990₽', ' в сутки')
 
 //- доделать галерею, вставить картинку, разобраться с ID в inputFiled(файл text-field.pug),убрать с миксина id
+//- доделать карточку галереи
