--- a/toxin/src/pages/headers-footers/headers-footers.pug
+++ b/toxin/src/pages/headers-footers/headers-footers.pug
@@ -1,5 +1,7 @@
 extends ../../base
 include ../../blocks/headers-footers/menu/menu
+include ../../blocks/form-elements/buttons/buttons
+include ../../blocks/headers-footers/header/header
 
 block title
     | Headers & Footers
@@ -10,27 +12,5 @@ block main
 
 block headers-section
     .container
-        .header__wrapper
-            .header__item--register
-                .logo-wrapper
-                    include ../../blocks/logo/logo-main
-                .header__menu--register
-                    .menu
-                        ul.menu__list
-                            -
-                                let menuList = [
-                                    {title: "О нас", link: "#", showFooter: true,},
-                                    {title: "Услуги", link: "#",showFooter: true,
-                                        subnav: [{title: "item 1",link: "#",}, {title: "item 2",link: "#",}]},
-                                    {title: "Вакансии", link: "#", showFooter: true,},
-                                    {title: "Новости", link: "#", showFooter: true,},
-                                    {title: "Соглашения", link: "#", showFooter: true,
-                                        subnav: [{title: "item 1", link: "#",},{title: "item 2",link: "#",}]},
-                                ]
-
-                        each element in menuList
-                            li.menu__item
-                                +elementMenu(element)
-
-
-
+        +header()
+        +header()
