--- a/toxin/src/pages/headers-footers/headers-footers.pug
+++ b/toxin/src/pages/headers-footers/headers-footers.pug
@@ -12,5 +12,5 @@ block main
 
 block headers-section
     .container
-        +header()
-        +header()
+        +header('headerRegister')
+        +header('headerRegistered')
