--- a/toxin/src/blocks/headers-footers/header/header.pug
+++ b/toxin/src/blocks/headers-footers/header/header.pug
@@ -1,7 +1,7 @@
 include ../../form-elements/buttons/buttons
 include ../../headers-footers/menu/menu
 
-mixin header()
+mixin header(dataType)
     .header__wrapper
         .header__item--register
             .logo-wrapper
@@ -13,7 +13,7 @@ mixin header()
                             let menuList = [
                                 {title: "О нас", link: "#", showFooter: true,},
                                 {title: "Услуги", link: "#",showFooter: true,
-                                    subnav: [{title: "item 1",link: "#",}, {title: "item 2",link: "#",}]},
+                                    subnav: [{title: "item 1", link: "#",}, {title: "item 2",link: "#",}]},
                                 {title: "Вакансии", link: "#", showFooter: true,},
                                 {title: "Новости", link: "#", showFooter: true,},
                                 {title: "Соглашения", link: "#", showFooter: true,
@@ -23,8 +23,13 @@ mixin header()
                         each element in menuList
                             +elementMenu(element)
 
-                .header__button
-                    +button('rounded-button', 'Войти')
-                    +button('button', 'Зарегистрироваться')
+                if (dataType === 'headerRegister')
+                    .header__button
+                        +button('rounded-button', 'Войти')
+                        +button('button', 'Зарегистрироваться')
+
+                else if (dataType === 'headerRegistered')
+                    .header__account
+                        div.user__account Юлий Цезарь
 
 //- доделать логику, чтобы по-одному открывались под меню
