--- a/toxin/src/blocks/headers-footers/menu/menu.scss
+++ b/toxin/src/blocks/headers-footers/menu/menu.scss
@@ -12,10 +12,7 @@
 
 .menu{
     position: relative;
-}
-
-.menu__submenu--wrap{
-    position: absolute;
+    right: 30px;
 }
 
 .menu__expander:after {
@@ -35,7 +32,7 @@
 
 .menu__submenu{
     display: none;
-    position: relative;
+    position: absolute;
     background-color: white;
     border-radius: 4px;
 }
