закончила верстать headers-footers, закончила ui kit

--- a/toxin/src/blocks/headers-footers/menu/menu.scss
+++ b/toxin/src/blocks/headers-footers/menu/menu.scss
@@ -30,6 +30,10 @@
     list-style: none;
 }
 
+.menu__submenu--wrap{
+    padding-right: 12px;
+}
+
 .menu__submenu{
     display: none;
     position: absolute;
