--- a/toxin/src/pages/headers-footers/headers-footers.pug
+++ b/toxin/src/pages/headers-footers/headers-footers.pug
@@ -2,6 +2,7 @@ extends ../../base
 include ../../blocks/headers-footers/menu/menu
 include ../../blocks/form-elements/buttons/buttons
 include ../../blocks/headers-footers/header/header
+include ../../blocks/headers-footers/footer/footer
 
 block title
     | Headers & Footers
@@ -14,3 +15,36 @@ block headers-section
     .container
         +header('headerRegister')
         +header('headerRegistered')
+
+block footers-section
+    .container
+        +footer({
+            navigation: [
+                {
+                    title: "Навигация",
+                    links: [
+                    { url: "/mock-address", text: "О нас" },
+                    { url: "/mock-address", text: "Новости" },
+                    { url: "/mock-address", text: "Служба поддержки" },
+                    { url: "/mock-address", text: "Услуги" },
+                    ]
+                },
+                {
+                    title: "О нас",
+                    links: [
+                    { url: "/mock-address", text: "О сервисе" },
+                    { url: "/mock-address", text: "Наша команда" },
+                    { url: "/mock-address", text: "Вакансии" },
+                    { url: "/mock-address", text: "Инвесторы" },
+                    ]
+                },
+                {
+                    title: "Служба поддержки",
+                    links: [
+                    { url: "/mock-address", text: "Соглашения" },
+                    { url: "/mock-address", text: "Сообщества" },
+                    { url: "/mock-address", text: "Связь с нами" },
+                    ]
+                },
+            ]
+        })
