--- a/toxin/src/blocks/headers-footers/footer/footer.scss
+++ b/toxin/src/blocks/headers-footers/footer/footer.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 40px 0;
+    margin-top: 40px;
 }
 
 .footer__text{
@@ -120,28 +120,4 @@
     background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-}
-
-.light-footer{
-    max-width: 768px;
-    width: 100%;
-    height: 367px;
-    background: #FFFFFF;
-    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.light-footer__content {
-    font-family: Montserrat, OpenSans, sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 17px;
-    text-align: center;
-    color: rgba(31, 32, 65, 0.75);
-    padding: 20px 0 25px 0
 }
