--- a/toxin/src/pages/cards/cards.pug
+++ b/toxin/src/pages/cards/cards.pug
@@ -1,9 +1,6 @@
 extends ../../base
-include ../../blocks/cards/cards-title/cards-title
-include ../../blocks/form-elements/calendar/calendar
+include ../../blocks/cards/find-apartments-card/find-apartments-card
 include ../../blocks/form-elements/text-field/text-field
-include ../../blocks/form-elements/dropdown/dropdown
-include ../../blocks/form-elements/buttons/buttons
 include ../../blocks/form-elements/radio-btn/radio-btn
 include ../../blocks/form-elements/toggle/toggle
 include ../../blocks/cards/invoice/invoice
@@ -22,38 +19,7 @@ block cards-section
     .container
         .cards__wrapper
             .cards__column
-                .cards__item
-                    .find-apartments__items
-                        .find-apartments__item
-                            +title('cards__title', 'Найдем номера под ваши пожелания')
-
-                            form(class="find-apartments__form" action="/mock-address" method="get")
-                                .datepicker-field
-                                    .datepicker-field--left
-                                        +subtitle('datepicker-field__title', 'Прибытие')
-                                        +datepickerLeft('text-field--datepicker text-field-datepicker--left', 'ДД.ММ.ГГГГ', 'startDate', 'start', 'material-icons--left-datepicker', 'expand_more')
-                                    .datepicker-field--right
-                                        +subtitle('datepicker-field__title', 'Выезд')
-                                        +datepickerRight('text-field--datepicker text-field-datepicker--right', 'ДД.ММ.ГГГГ', 'endDate', 'end', 'material-icons--left-datepicker', 'expand_more')
-
-                        .find-apartments__item
-                            +subtitle('find-apartments__subtitle', 'Гости')
-                        .find-apartments__dropdown
-                            form(action="")
-                                .form-elements__input--dropdown
-                                    +dropdown('Сколько гостей')
-
-                                div(class="dropdown__menu")
-                                    +dropdownControls('item-adult', 'Взрослые', '-', '0', '+')
-                                    +dropdownControls('item-children', 'Дети', '-', '0', '+')
-                                    +dropdownControls('item-babies', 'Младенцы', '-', '0', '+')
-
-                                    div(class="dropdown__buttons" data-id="item-btn")
-                                        button(class="clear-btn") Очистить
-                                        button(class="apply-btn") Применить
-
-                        .find-apartments__item
-                            +longButton('find-apartments__button long-button', 'Подобрать номер', 'long-button__icon', 'arrow_forward')
+                +findApartmentsCard()
 
                 .cards__item
                     .register__items
