сверстан registration page

--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -25,3 +25,4 @@ html
         block headers-section
         block footers-section
         block landing-section
+        block registration-section
