сверстан sign-in page

--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -26,3 +26,4 @@ html
         block footers-section
         block landing-section
         block registration-section
+        block signIn-section
