начала верстать room-details

--- a/toxin/src/base.pug
+++ b/toxin/src/base.pug
@@ -27,3 +27,4 @@ html
         block landing-section
         block registration-section
         block signIn-section
+        block roomDetails-section
